postgres-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-cluster
  labels:
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/part-of: database
    istio-injection: disabled
---
